--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Checkers</title>
 </head>
 <body>
-    <div class="board">
-
-
-    </div>
-
+    <header class="header"></header>
+    <nav class="navigation"></nav>
+    <main class="content">
+        <div class="board">
+        </div>
+    </main>
+    <aside class="ads"></aside>
+    <footer class="footer"></footer>            
     <script src="scripts/index.js"></script>
 </body>
 </html>
